# mimirheim

./: .dockerignore  .gitignore  AGENTS.md  IMPLEMENTATION_DETAILS.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build-edge.yaml  build-image.yaml  build-pr.yaml  build-release.yaml  cleanup-ghcr-pr.yaml  cleanup-ghcr.yaml  deploy-hassio.yaml  test.yaml
container/: Dockerfile  README.md
examples/homeassistant/: mimirheim_price_sensors.yaml  mimirheim_reporter_dashboard.yaml
hassio-repository/: README.md  repository.yaml
hassio-repository/mimirheim/: CHANGELOG.md  DOCS.md  config.yaml
hassio-repository/mimirheim-beta/: CHANGELOG.md  Dockerfile  config.yaml
hassio-repository/mimirheim-edge/: DOCS.md  config.yaml
mimirheim/: __init__.py  __main__.py
mimirheim/config/: __init__.py  example.yaml  schema.json  schema.py
mimirheim/core/: __init__.py  bundle.py  confidence.py  context.py  control_arbitration.py  forecast.py  model_builder.py  objective.py  post_process.py  readiness.py  solver_backend.py
mimirheim/devices/: __init__.py  battery.py  combi_heat_pump.py  deferrable_load.py  ev.py  grid.py  hybrid_inverter.py  pv.py  space_heating.py  static_load.py  thermal_boiler.py
mimirheim/io/: __init__.py  ha_discovery.py  input_parser.py  mqtt_client.py  mqtt_publisher.py
mimirheim_helpers/config_editor/: README.md
mimirheim_helpers/examples/: baseload-ha-db.yaml  baseload-ha.yaml  baseload-static.yaml  config-editor.yaml  nordpool.yaml  pv-fetcher.yaml  pv-ml-learner.yaml  reporter.yaml  scheduler.yaml  zonneplan.yaml
mimirheim_helpers/scheduler/: AGENTS.md  README.md  example.yaml
plans/done/: 01_project_scaffold.md  02_config_schema.md  03_core_models.md  04_solver_backend.md  05_model_context.md  06_device_grid.md  07_device_battery.md  08_device_pv.md  09_device_ev.md  10_device_deferrable_load.md  11_device_static_load.md  12_objective_builder.md  13_model_builder.md  14_readiness.md  15_io_layer.md  16_entrypoint_and_integration.md  17_minimize_consumption_phase2.md  18_variable_pv_production.md  19_grid_import_export_binary.md  20_naive_cost_pv_export_credit.md  21_battery_soc_penalty.md  22_battery_power_derating.md  23_battery_sos2_efficiency.md  24_hybrid_inverter_device.md  25_thermal_boiler.md  26_space_heating.md  27_combi_heat_pump.md  28_building_thermal_model.md  29_zero_export_flags.md  30_pv_staged_power.md  32_solver_rewrite_docs.md  33_cbc_solver_backend.md  34_migrate_unit_tests.md  35_golden_file_regen.md  36_remove_highs.md  37_benchmark_verification.md  38_schema_ui_annotations.md  38_zero_export_enforcer_and_system_constraints.md  39_config_editor_service.md  39_pv_control_mode_simplification.md  (+26 more)
scripts/: analyse_dump.py  extract_config_docs.py  generate_schema_json.py  simplebroker.py
tests/: conftest.py
tests/benchmarks/: _cpu_probe.py  _generate_data.py  minimal_home_24h.mps  prosumer_ev_48h.mps  test_benchmarks.py  worst_case_24h.mps  worst_case_48h.mps  worst_case_72h.mps
tests/integration/: test_mqtt_roundtrip.py  test_readiness_mqtt.py
tests/scenarios/: test_scenarios.py
tests/scenarios/flat_price/: config.yaml  (+2 more)
tests/unit/: test_battery_constraints.py  test_building_thermal_model.py  test_bundle.py  test_clip_bundle.py  test_combi_heat_pump_constraints.py  test_config_editor_crud_generic.py  test_config_editor_server.py  test_config_schema.py  test_control_arbitration.py  test_deferrable_load_constraints.py  test_ev_constraints.py  test_forecast.py  test_grid_constraints.py  test_ha_discovery.py  test_horizon.py  test_hybrid_inverter_constraints.py  test_input_parser.py  test_main_reporting_notification.py  test_model_builder.py  test_model_context.py  test_mqtt_client.py  test_mqtt_publisher.py  test_objective_builder.py  test_post_process.py  test_pv_constraints.py  test_readiness.py  test_reporter_setpoint_coverage.py  test_schema_ui_annotations.py  test_solver_backend.py  test_space_heating_constraints.py  test_static_load_constraints.py  test_thermal_boiler_constraints.py
(+188 files in other folders)
